kube/lifecycle/scripts/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE_PLACEHOLDER
  annotations:
    openshift.io/sa.scc.mcs: "s0:c24,c4"
    openshift.io/sa.scc.supplemental-groups: "1001/10000"
    openshift.io/sa.scc.uid-range: "1000/10000"
