kube/lifecycle/scripts/openshift/networkPolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: NAMESPACE_PLACEHOLDER
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: dx-deployment-haproxy
  ingress:
    - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  podSelector:
  ingress: []
